changed command line specification  for simulation - included jvm parameters